Fixed banner alignment

--- a/PayCalcStyle.css
+++ b/PayCalcStyle.css
@@ -13,9 +13,12 @@ input {
 }
 
 h1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
     font: 12pt monospace;
     font-weight: bold;
     padding: 0px 4px;
+    line-height: inherit;
 }
 
 table {
@@ -37,6 +40,8 @@ td {
 {
     float: left;
     width:50%;
+    line-height: 48px;
+    height:48px;
 }
 
 .numeric {
